--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Move App Guide</title>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="card.css">
 </head>
 <body>
     <div class="container">
