--- a/test.html
+++ b/test.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div class="card">
-        <div class="card-img"></div>
+        <div class="card-img">
+            <img src="19.jpg" alt="">
+        </div>
         <div class="card-info">
             <div class="card-title">Interstellar</div>
             <div class="card-meta">PG-13 / 2h 49min / Adventure, Drama, Sci-Fi</div>
-            <div class="card-stats">
+            <!-- <div class="card-stats">
                 <span><i class="fa fa-eye"></i>124</span>
                 <span><i class="fa fa-heart"></i>3</span>
-            </div>
+            </div> -->
             <div class="card-summary">
                 <h3>SUMMARY</h3>
                 <p>A group of elderly people are giving interviews about having lived in a climate of crop blight and constant dust...</p>
